--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "term-project-team-g",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
@@ -16,12 +16,14 @@
     "debug": "~2.6.9",
     "dotenv": "^5.0.1",
     "ejs": "~2.5.7",
-    "express": "~4.15.5",
+    "express": "^4.15.2",
     "morgan": "~1.9.0",
+    "npm": "^5.8.0",
     "pg-promise": "^8.2.2",
-    "sequelize": "^4.37.2",
+    "sequelize": "^4.37.4",
     "sequelize-cli": "^4.0.0",
-    "serve-favicon": "~2.4.5"
+    "serve-favicon": "~2.4.5",
+    "socket.io": "^2.1.0"
   },
   "devDependencies": {
     "nodemon": "^1.17.2"
