--- a/package.json
+++ b/package.json
@@ -11,13 +11,17 @@
     "postinstall": "sequelize db:migrate"
   },
   "dependencies": {
+    "bcrypt": "^2.0.0",
     "body-parser": "~1.18.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "dotenv": "^5.0.1",
     "ejs": "~2.5.7",
     "express": "~4.15.5",
+    "express-session": "^1.15.6",
     "morgan": "~1.9.0",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "pg-promise": "^8.2.2",
     "sequelize": "^4.37.2",
     "sequelize-cli": "^4.0.0",
