--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "term-project-team-g",
   "version": "1.0.0",
+  "engines": {
+    "node": "9.5.0"
+  },
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
