--- a/package.json
+++ b/package.json
@@ -29,9 +29,10 @@
     "sequelize": "^4.37.4",
     "sequelize-cli": "^4.0.0",
     "serve-favicon": "~2.4.5",
-    "socket.io": "^2.1.0"
+    "socket.io": "^2.1.0",
+    "source-map-url": "^0.4.0"
   },
   "devDependencies": {
-    "nodemon": "^1.17.2"
+    "nodemon": "^1.17.4"
   }
 }
